--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">ContentProvider</string>
     <string name="action_settings">Settings</string>
+    <string name="table_one">Table One</string>
+    <string name="table_two">Table Two</string>
+    <string name="add">Add</string>
+    <string name="update">update</string>
+    <string name="delete">delete</string>
 </resources>
